--- a/views/shop.html
+++ b/views/shop.html
@@ -50,7 +50,7 @@
 </tr>
 </table>
     
-    <link rel="stylesheet" href="/css/styles.css">
-    <script type="module" src="/js/shop.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <script type="module" src="../js/shop.js"></script>
 </body>
 </html>
