--- a/views/404.html
+++ b/views/404.html
@@ -9,6 +9,6 @@
     <h1>Oops! The page you’re looking for doesn’t exist.</h1>
     <button class="btn"><a href="index.html">Go Back</a></button>
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </body>
 </html>
