--- a/views/index.html
+++ b/views/index.html
@@ -6,13 +6,13 @@
     <title>Home</title>
     <nav>
         <ul>
-          <li><a href="/views/index.html">Home</a></li>
+          <li><a href="views/index.html">Home</a></li>
           <li>
-            <a href="/views/shop.html"
+            <a href="views/shop.html"
               >Shop</a
             >
           </li>
-          <li><a href="/views/404.html">About</a></li>
+          <li><a href="views/404.html">About</a></li>
         </ul>
       </nav>
 </head>
@@ -23,6 +23,6 @@
     <p>For business customers and professionals, our store offers automatic invoice generation for every purchase. Simply add your items to the cart, check out, and download your PDF invoice instantly. Perfect for expense tracking, tax deductions, and corporate purchases!</p>
     <button class="btn"> <a href="shop.html">Browse, Buy & Download Instantly</a></button>
     
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </body>
 </html>
