--- a/views/shop.html
+++ b/views/shop.html
@@ -6,13 +6,13 @@
     <title>Shopping</title>
     <nav>
         <ul>
-          <li><a href="/views/index.html">Home</a></li>
+          <li><a href="views/index.html">Home</a></li>
           <li>
-            <a href="/views/shop.html"
+            <a href="views/shop.html"
               >Shop</a
             >
           </li>
-          <li><a href="/views/404.html">About</a></li>
+          <li><a href="views/404.html">About</a></li>
         </ul>
       </nav>
 </head>
@@ -50,7 +50,7 @@
 </tr>
 </table>
     
-    <link rel="stylesheet" href="../css/styles.css">
-    <script type="module" src="../js/shop.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script type="module" src="js/shop.js"></script>
 </body>
 </html>
