--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <nav>
         <ul>
-          <li><a href="views/index.html">Home</a></li>
+          <li><a href="/views/index.html">Home</a></li>
           <li>
             <a href="views/shop.html"
               >Shop</a
