--- a/views/index.html
+++ b/views/index.html
@@ -6,13 +6,13 @@
     <title>Home</title>
     <nav>
         <ul>
-          <li><a href="/views/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li>
-            <a href="views/shop.html"
+            <a href="shop.html"
               >Shop</a
             >
           </li>
-          <li><a href="views/404.html">About</a></li>
+          <li><a href="404.html">About</a></li>
         </ul>
       </nav>
 </head>
