--- a/views/index.html
+++ b/views/index.html
@@ -24,4 +24,4 @@
     <button class="btn"> <a href="shop.html">Browse, Buy & Download Instantly</a></button>
 </body>
 </html>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./style.css">
